kubernetes/gawon/gawon-svc.yaml
apiVersion: v1 
kind: Service 
metadata:
  name: gawon-service
spec:
  ports:
  - port: 80
  selector:
    app: gawon
